--- a/package.json
+++ b/package.json
@@ -18,7 +18,11 @@
     "postcss": "8.4.27",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-multi-carousel": "^2.8.4",
     "tailwindcss": "3.3.3",
     "zustand": "^4.4.1"
+  },
+  "devDependencies": {
+    "dotenv": "^16.3.1"
   }
 }
