--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "^5.1.1",
     "@svgr/webpack": "^8.0.1",
     "autoprefixer": "10.4.14",
     "eslint": "8.45.0",
@@ -23,6 +24,7 @@
     "zustand": "^4.4.1"
   },
   "devDependencies": {
-    "dotenv": "^16.3.1"
+    "dotenv": "^16.3.1",
+    "prisma": "^5.1.1"
   }
 }
