--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@prisma/client": "^5.1.1",
+    "@hookform/resolvers": "^3.2.0",
+    "@supabase/auth-helpers-nextjs": "^0.7.4",
+    "@supabase/supabase-js": "^2.32.0",
     "@svgr/webpack": "^8.0.1",
     "autoprefixer": "10.4.14",
     "eslint": "8.45.0",
@@ -19,12 +21,13 @@
     "postcss": "8.4.27",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.45.4",
     "react-multi-carousel": "^2.8.4",
     "tailwindcss": "3.3.3",
+    "zod": "^3.22.2",
     "zustand": "^4.4.1"
   },
   "devDependencies": {
-    "dotenv": "^16.3.1",
-    "prisma": "^5.1.1"
+    "dotenv": "^16.3.1"
   }
 }
