--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.45.4",
+    "react-hot-toast": "^2.4.1",
     "react-multi-carousel": "^2.8.4",
     "tailwindcss": "3.3.3",
     "zod": "^3.22.2",
