--- a/package.json
+++ b/package.json
@@ -13,10 +13,15 @@
     "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-hover-card": "^1.0.6",
     "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-select": "^1.2.2",
+    "@radix-ui/react-slot": "^1.0.2",
     "@supabase/auth-helpers-nextjs": "^0.7.4",
     "@supabase/supabase-js": "^2.32.0",
     "@svgr/webpack": "^8.0.1",
     "autoprefixer": "10.4.14",
+    "class-variance-authority": "^0.7.0",
+    "classnames": "^2.3.2",
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.12",
     "framer-motion": "^10.13.2",
@@ -32,6 +37,7 @@
     "zustand": "^4.4.1"
   },
   "devDependencies": {
-    "dotenv": "^16.3.1"
+    "dotenv": "^16.3.1",
+    "tailwindcss-animate": "^1.0.7"
   }
 }
