--- a/package.json
+++ b/package.json
@@ -14,20 +14,25 @@
     "@radix-ui/react-hover-card": "^1.0.6",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-popover": "^1.0.6",
     "@radix-ui/react-select": "^1.2.2",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-switch": "^1.0.3",
     "@supabase/auth-helpers-nextjs": "^0.7.4",
     "@supabase/supabase-js": "^2.32.0",
     "@svgr/webpack": "^8.0.1",
     "autoprefixer": "10.4.14",
     "class-variance-authority": "^0.7.0",
     "classnames": "^2.3.2",
+    "date-fns": "^2.30.0",
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.12",
     "framer-motion": "^10.13.2",
     "next": "13.4.12",
+    "next-cloudinary": "^4.20.0",
     "postcss": "8.4.27",
     "react": "18.2.0",
+    "react-day-picker": "^8.8.1",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.45.4",
     "react-hot-toast": "^2.4.1",
@@ -38,6 +43,7 @@
   },
   "devDependencies": {
     "dotenv": "^16.3.1",
+    "encoding": "^0.1.13",
     "tailwindcss-animate": "^1.0.7"
   }
 }
