--- a/package.json
+++ b/package.json
@@ -26,14 +26,14 @@
     "classnames": "^2.3.2",
     "date-fns": "^2.30.0",
     "eslint": "8.45.0",
-    "eslint-config-next": "13.4.12",
+    "eslint-config-next": "^13.4.19",
     "framer-motion": "^10.13.2",
-    "next": "13.4.12",
+    "next": "^13.4.19",
     "next-cloudinary": "^4.20.0",
     "postcss": "8.4.27",
-    "react": "18.2.0",
+    "react": "^18.2.0",
     "react-day-picker": "^8.8.1",
-    "react-dom": "18.2.0",
+    "react-dom": "^18.2.0",
     "react-hook-form": "^7.45.4",
     "react-hot-toast": "^2.4.1",
     "react-multi-carousel": "^2.8.4",
