--- a/package.json
+++ b/package.json
@@ -11,25 +11,33 @@
   "dependencies": {
     "@hookform/resolvers": "^3.2.0",
     "@radix-ui/react-checkbox": "^1.0.4",
+    "@radix-ui/react-dialog": "^1.0.4",
+    "@radix-ui/react-dropdown-menu": "^2.0.5",
     "@radix-ui/react-hover-card": "^1.0.6",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-popover": "^1.0.6",
     "@radix-ui/react-select": "^1.2.2",
+    "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-switch": "^1.0.3",
+    "@radix-ui/react-tabs": "^1.0.4",
     "@supabase/auth-helpers-nextjs": "^0.7.4",
     "@supabase/supabase-js": "^2.32.0",
     "@svgr/webpack": "^8.0.1",
+    "@tanstack/react-table": "^8.9.7",
     "autoprefixer": "10.4.14",
     "class-variance-authority": "^0.7.0",
     "classnames": "^2.3.2",
+    "cmdk": "^0.2.0",
     "date-fns": "^2.30.0",
     "eslint": "8.45.0",
     "eslint-config-next": "^13.4.19",
     "framer-motion": "^10.13.2",
+    "install": "^0.13.0",
     "next": "^13.4.19",
     "next-cloudinary": "^4.20.0",
+    "npm": "^10.1.0",
     "postcss": "8.4.27",
     "react": "^18.2.0",
     "react-day-picker": "^8.8.1",
